# AI-Werewolf-Engine

./: CMakeLists.txt  README.md  http_conn.cpp  http_conn.h  locker.h  lst_timer.h  main.cpp  threadpool.h
ai/: ai_client.cpp  ai_client.h
base/: block_queue.h  log.cpp  log.h  string_utils.h
game/: AIOrchestrator.h  EventBus.cpp  EventBus.h  GameContext.cpp  GameContext.h  Judge.cpp  Judge.h  RuleEngine.cpp  RuleEngine.h  player.h
game/hooks/: SkillHooks.cpp  SkillHooks.h
game/phases/: DaySpeakPhase.cpp  DaySpeakPhase.h  NightPhase.cpp  NightPhase.h  SheriffElectionPhase.cpp  SheriffElectionPhase.h  VotePhase.cpp  VotePhase.h
game/support/: PhaseUtils.cpp  PhaseUtils.h  PromptParsers.cpp  PromptParsers.h  TaskExecutor.cpp  TaskExecutor.h
net/: epoll_utils.cpp  epoll_utils.h  http_conn.cpp  locker.h  lst_timer.h  threadpool.h
resources/: index.html  roles.json  templates.json
tests/: day_speak_wwk_interrupt_test.cpp  log_overflow_test.cpp  phase_test_utils.h  sheriff_election_day2_wwk_explosion_test.cpp  sheriff_election_wwk_interrupt_test.cpp  vote_pk_wwk_interrupt_test.cpp
